--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vue3-datepicker": "^0.4.0",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
