--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@connectlive/connectlive-web-sdk": "^2.2.8",
     "@mdi/font": "5.9.55",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
