--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "roboto-fontface": "*",
+    "sockjs-client": "^1.6.1",
     "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
