--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@connectlive/connectlive-web-sdk": "^2.2.8",
     "@mdi/font": "5.9.55",
+    "@types/socket.io-client": "1.4.35",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
