--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@connectlive/connectlive-web-sdk": "^2.2.8",
     "@mdi/font": "5.9.55",
     "@types/socket.io-client": "1.4.35",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
