--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
+    "pinia": "^2.1.7",
     "roboto-fontface": "*",
     "sockjs-client": "^1.6.1",
     "vue": "^3.3.4",
