feat: 상품 공개 상태 변경

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     }
   ],
   "compilerOptions": {
-    "typeRoots": ["./@types", "./node_modules/@types"]
+    "typeRoots": ["./@types", "./node_modules/@types"],
+    "types": ["pinia-plugin-persist"]
   }
 }
