--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
     "pinia": "^2.1.7",
+    "pinia-persist": "^0.1.0",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "roboto-fontface": "*",
     "sockjs-client": "^1.6.1",
     "vue": "^3.3.4",
