--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "@mdi/font": "5.9.55",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
+    "agora-react-uikit": "^1.2.0",
+    "agora-rtc-react": "^2.1.0",
+    "agora-rtc-sdk": "^3.6.11",
+    "agora-rtc-sdk-ng": "^4.20.0",
     "axios": "^1.6.2",
     "bootstrap-icons": "^1.11.2",
+    "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "roboto-fontface": "*",
@@ -41,6 +46,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
     "node-sass": "^9.0.0",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.0.3",
