--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "roboto-fontface": "*",
     "sockjs-client": "^1.6.1",
     "vue": "^3.3.4",
+    "vue-feather-icons": "^5.1.0",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
