--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
+    "vue3-pagination": "^1.0.16",
     "webfontloader": "^1.0.0",
     "webstomp-client": "^1.2.6"
   },
