--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sass-loader": "^13.3.2",
     "typescript": "~5.2.0",
     "vite": "^4.4.11",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-vue": "^0.0.1",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
